--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "amphp/http-server": "^2.1",
         "amphp/http-server-router": "^1.0",
-        "php": "^8.0"
+        "php": "^8.0",
+        "rdlowrey/auryn": "^1.4"
     },
     "license": "MIT",
     "autoload": {
