add HandlerCollection and move to app/

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Thgs\\Stickman\\": "src/"
+            "Thgs\\Stickman\\": "src/",
+            "App\\": "app/"
         }
     },
     "authors": [
