--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "amphp/http-server-router": "^1.0",
         "php": "^8.0",
         "rdlowrey/auryn": "^1.4",
-        "amphp/log": "^1.1"
+        "amphp/log": "^1.1",
+        "psr/container": "^2.0"
     },
     "license": "MIT",
     "autoload": {
